<resources>
    <string name="app_name">WePTT</string>
    <string name="app_name_cmcc">4G POC</string>
    <string name="app_name_bper">Bper</string>
    <string name="app_name_bper_mtt">G&amp;T</string>
    <string name="app_name_unicom">WoPTT</string>
    <string name="app_name_picc">PICC</string>
    <string name="app_name_cpic">CPIC</string>
    <string name="copyright"></string>
    <string name="copyright_weptt1">Copyright 2009-2015 Haolian</string>
    <string name="copyright_weptt2">Haolian All Rights Reserved</string>
    <string name="copyright_cmcc1">Copyright 2009-2015 CMCC</string>
    <string name="copyright_cmcc2">CMCC All Rights Reserved</string>
    <string name="copyright_picc1">Copyright 2009-2015 PICC</string>
    <string name="copyright_picc2">PICC All Rights Reserved</string>
    <string name="copyright_cpic1">Copyright 2009-2015 CPIC</string>
    <string name="copyright_cpic2">CPIC All Rights Reserved</string>
    <string name="copyright_unicomgz1">Copyright 2009-2015 ChinaUnicom</string>
    <string name="copyright_unicomgz2">贵州联通  版权所有\nCopyright 2009-2015 ChinaUnicom\nAll Rights Reserved</string>
    <string name="copyright_taitongyuan1">Copyright 2009-2015 泰通元</string>
    <string name="copyright_taitongyuan2">Copyright 2009-2015 泰通元</string>
    <string name="copyright_gugong1">Copyright 2009-2015 正荣网际</string>
    <string name="copyright_gugong2">Copyright 2009-2015 正荣网际</string>
    <string name="copyright_datang1">Copyright 2009-2015 大唐电信</string>
    <string name="copyright_datang2">Copyright 2009-2015 大唐电信</string>
    <string name="copyright_lishi_technology1">Copyright 2009-2015 力石科技</string>
    <string name="copyright_lishi_technology2">Copyright 2009-2015 力石科技</string>
    <string name="talk_video_me">Me</string>
    <string name="talk_video_idle">Idle</string>
    <string name="talk_video_listen">Listen</string>
    <string name="talk_me">Me</string>
    <string name="talk_authorization_title">Authorization information</string>
    <string name="talk_authorization_info1">PhoneModel: </string>
    <string name="talk_authorization_info2">IMEI: </string>
    <string name="talk_authorization_info3">Unauthorized!</string>
    <string name="talk_user_title">All members</string>
    <string name="talk_group_title">Channel</string>
    <string name="talk_session_title">History</string>
    <string name="talk_user_account_manage">Account management</string>
    <string name="talk_user_ipocid">Account</string>
    <string name="talk_user_username">Display name</string>
    <string name="talk_user_username_edit">Edit display name</string>
    <string name="talk_user_password">Password</string>
    <string name="talk_user_info_update_name">Change display name</string>
    <string name="talk_user_info_update_name_doing">Updating...</string>
    <string name="talk_user_info_update_name_error">The display name should not longer than 11 words!</string>
    <string name="talk_user_info_update_name_ok">Name updated!</string>
    <string name="talk_user_info_update_name_fail">Name updated failed, try again please!</string>
    <string name="talk_tools">More</string>
    <string name="talk_tools_infosys"></string>
    <string name="talk_tools_infosys_null"></string>
    <string name="talk_tools_help">Help</string>
    <string name="talk_tools_report">Submission</string>
    <string name="talk_tools_report_description">Submission description</string>
    <string name="talk_tools_report_date">Submission date</string>
    <string name="talk_tools_report_pic">Picture Submit</string>
    <string name="talk_tools_report_vid">Video Submit</string>
    <string name="talk_tools_call_center">Call center</string>
    <string name="talk_tools_call_center_confirm">Call center?</string>
    <string name="talk_tools_session">History Management</string>
    <string name="talk_tools_channel">Channel Channel</string>
    <string name="talk_tools_setting">Settings</string>
    <string name="talk_tools_setting_voice">PTT settings</string>
    <string name="talk_tools_setting_voice_volume">Volume</string>
    <string name="talk_tools_setting_voice_amplifier">Volume amplifier</string>
    <string name="talk_tools_setting_voice_amplifier_tip">By enabling amplifier, the voice volume can be increased.</string>
    <string name="talk_tools_setting_voice_listen_mode">Listen mode</string>
    <string name="talk_tools_setting_voice_mode_earphone">Earphone mode</string>
    <string name="talk_tools_setting_voice_mode_speaker">Speaker mode</string>
    <string name="talk_tools_setting_voice_mode_bluetooth">Bluetooth mode</string>
    <string name="talk_tools_setting_answer_mode">Answer mode</string>
    <string name="talk_tools_setting_answer_mode_tip">Whether answer automatically or not when PTT call incoming.</string>
    <string name="talk_tools_setting_isb">Do not disturb</string>
    <string name="talk_tools_setting_isb_tip">When enabling this, all the PTT call will be rejected automatically.</string>
    <string name="talk_tools_setting_hb">Heartbeat frequency</string>
    <string name="talk_tools_setting_hb_tip">The higher the frequency of heartbeat will consume more power and flow rate, but it can improve the performance of the intercom voice call.</string>
    <string name="talk_tools_setting_ptt_click">PTT button on screen</string>
    <string name="talk_tools_setting_ptt_click_tip">Whether supporting the click mode of PTT button on screen.</string>
    <string name="talk_tools_setting_ptt_volume">Volume key</string>
    <string name="talk_tools_setting_ptt_volume_tip">Whether using VOLUME key as PTT key.</string>
    <string name="talk_tools_pwd_update">Change password</string>
    <string name="talk_tools_manual">Manual</string>
    <string name="talk_tools_defect">Feedback</string>
    <string name="talk_tools_defect_title">Tell us the problem you met or any proposal:</string>
    <string name="talk_tools_defect_report">Feed back</string>
    <string name="talk_tools_defect_report_tip">Thanks for your feedback! We will do our best to deal with it as soon as possible.</string>
    <string name="talk_tools_defect_report_error">Network error! Please try again.</string>
    <string name="talk_tools_about">About</string>
    <string name="talk_tools_notice">Notice</string>
    <string name="talk_tools_notice_comment_tip">Input your comments</string>
    <string name="talk_tools_notice_comment_send">Send</string>
    <string name="talk_tools_location">Position Reporting</string>
    <string name="talk_tools_location_tip">After opening, your location will be return regularly</string>
    <string name="talk_fence_warning_title">Warning</string>
    <string name="talk_fence_warning_tip">Please note! You crossed the Electronic fence!</string>
    <string name="talk_task_dispatch_title">New Task</string>
    <string name="talk_session_member">Channel member</string>
    <string name="talk_session_msg">Message</string>
    <string name="talk_session_call">Call</string>
    <string name="talk_session_call_title">Invite</string>
    <string name="talk_session_call_add">Invite</string>
    <string name="talk_session_call_add_tip">Invite</string>
    <string name="talk_session_call_cancel">Cancel</string>
    <string name="talk_click_talk">Click/Hold to talk</string>
    <string name="talk_click_talk_hold">Hold to talk</string>
    <string name="talk_click_stop">Stop talking</string>
    <string name="talk_click_applying">Requesting...</string>
    <string name="talk_click_releasing">Releasing...</string>
    <string name="talk_release_queue">Cancel queue</string>
    <string name="talk_incoming_accept">Accept</string>
    <string name="talk_incoming_reject">Reject</string>
    <string name="talk_incoming_channel_alert_owner_tip">Administrator requires you to enter this channel. The system has automatically switched for you!</string>
    <string name="talk_incoming_channel_alert_tip"> asked you to enter the channel (%s). Do you accept?</string>
    <string name="talk_incoming_channel_alert_send_tip">Do you want to inform the channel members to enter this channel?</string>
    <string name="talk_incoming_channel_alert_sending">Inviting members...</string>
    <string name="talk_incoming_channel_alert_sent_tip_ok">Invitation done!</string>
    <string name="talk_incoming_channel_alert_sent_tip_err">Invitation failed! Please try again.</string>
    <string name="talk_incoming_channel_alert_message">called you to enter channel</string>
    <string name="talk_incoming_channel_alert_accept">Enter</string>
    <string name="talk_incoming_channel_alert_reject">Ignore</string>
    <string name="talk_session_alert_channel">Inform</string>
    <string name="talk_session_video_share">Video Share</string>
    <string name="talk_session_building">Connecting...</string>
    <string name="talk_session_calling">Calling...</string>
    <string name="talk_session_end_call">Hang up</string>
    <string name="talk_session_idle">Status: Idle</string>
    <string name="talk_user_search_org">Group: </string>
    <string name="talk_user_search_org_no">(No group)</string>
    <string name="talk_user_search_tip">User ID/Name</string>
    <string name="talk_user_search_key_empty">Please input user ID/Name.</string>
    <string name="talk_user_search_result_empty">No search result!</string>
    <string name="talk_tip_waiting">Please wait...</string>
    <string name="talk_tip_session_members_max">Add member failed, might reach the maxium 30 people</string>
    <string name="talk_tip_session_call">Please select members</string>
    <string name="talk_calling_offline">The user is offline!</string>
    <string name="talk_calling_noanswer">No answer!</string>
    <string name="talk_calling_fail">Call setup failed, please try again later!</string>
    <string name="talk_calling_server_deny">Sorry, The subscriber you dialed block the stranger!</string>
    <string name="talk_calling_frequently">Sorry, you call to frequency!</string>
    <string name="talk_line_busy">The subscriber you called is busy, please try again later!</string>
    <string name="talk_line_reject">The call was refused!</string>
    <string name="talk_had_idel">Call disconnected!</string>
    <string name="talk_channel_idle">Channel disconnected</string>
    <string name="talk_incoming"> Incoming call\r\n\r\nHint: Press Back or Menu Key to Silence</string>
    <string name="talk_login_account">Please enter the user name and password</string>
    <string name="talk_input_pwd">Password</string>
    <string name="talk_name_digits"> 0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="talk_gps_state">Status:</string>
    <string name="talk_gps_state_open">Enable</string>
    <string name="talk_gps_frequence">Frequency</string>
    <string name="talk_gps_data">Location data:</string>
    <string name="talk_gps_data_long">Longitude:</string>
    <string name="talk_gps_data_lat">Latitude:</string>
    <string name="talk_gps_data_h">Altitude:</string>
    <string name="talk_gps_data_s">Speed:</string>
    <string name="talk_gps_data_o">Orientation:</string>
    <string name="talk_gps_data_t">Submit Time:</string>
    <string name="talk_input_phone">Enter the phone number</string>
    <string name="talk_input_name">Enter your name</string>
    <string name="talk_next_step">Next step</string>
    <string name="talk_old_pwd">Current password</string>
    <string name="talk_new_pwd">New password</string>
    <string name="talk_update1">Update</string>
    <string name="talk_show_password">Show password</string>
    <string name="talk_task_details_name">Task name:</string>
    <string name="talk_task_details_leader">Task leader:</string>
    <string name="talk_task_details_creater">Task creater:</string>
    <string name="talk_task_details_desc">Task desc:</string>
    <string name="talk_task_action_start">Start</string>
    <string name="talk_task_action_upload">Report</string>
</resources>