<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout   xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"  android:layout_width="fill_parent" android:id="@+id/main_content" android:layout_height="fill_parent" >
	<ScrollView  android:orientation="vertical"  android:layout_width="fill_parent" android:layout_height="wrap_content" android:scrollbars="none">
		<RelativeLayout   android:orientation="vertical"  android:layout_width="fill_parent" android:id="@+id/main_content" android:layout_height="fill_parent" >
			<LinearLayout  android:orientation="vertical"  android:layout_width="fill_parent" android:id="@+id/login" android:layout_height="wrap_content"  android:layout_marginLeft="20dip" android:layout_marginRight="20dip" android:layout_marginTop="150dip" android:background="?theme_bg_input" >
				<EditText android:drawableLeft="@drawable/login_phone" android:gravity="center_vertical" android:layout_height="50dip" android:hint="@string/talk_input_phone" android:id="@+id/et_phone"  android:textSize="15dip" android:layout_width="fill_parent"   android:layout_marginLeft="20dip"  android:drawablePadding="20dip" android:inputType="phone" android:maxLength="11" android:background="#00000000" android:textColor="?theme_color_text1"  android:textColorHint="?theme_color_hint"/>
				<View android:layout_height="1px" android:layout_width="fill_parent" android:background="?theme_divider_login"  android:layout_marginLeft="20dp"  android:layout_marginRight="20dp"/>
				<EditText android:drawableLeft="@drawable/login_user" android:gravity="center_vertical" android:layout_height="50dip" android:hint="@string/talk_input_name" android:id="@+id/et_name"  android:textSize="15dip" android:layout_width="fill_parent"   android:layout_marginLeft="20dip"  android:drawablePadding="20dip" android:inputType="text" android:maxLength="9" android:background="#00000000" android:textColor="?theme_color_text1" android:textColorHint="?theme_color_hint" />
				<View android:layout_height="1px" android:layout_width="fill_parent" android:background="?theme_divider_login"  android:layout_marginLeft="20dp"  android:layout_marginRight="20dp"/>
				<EditText android:drawableLeft="@drawable/login_pwd" android:gravity="center_vertical" android:layout_height="50dip" android:hint="@string/talk_input_pwd"  android:id="@+id/et_password"  android:textSize="15dip" android:layout_width="fill_parent"  android:layout_marginLeft="20dip"  android:drawablePadding="20dip" android:layout_alignParentTop="true" android:background="#00000000" android:textColor="?theme_color_text1" android:textColorHint="?theme_color_hint" android:password="true" android:maxLength="15" android:singleLine="true" android:digits="@string/talk_name_digits" /><!-- android:digits="@string/name_digits" -->
			</LinearLayout>
			<CheckBox  android:text="@string/talk_show_password"    android:layout_width="wrap_content"  android:id="@+id/show_password"  android:layout_height="wrap_content" android:button="?theme_btn_check" android:layout_marginTop="5dip" android:layout_marginBottom="10dip"  android:textColor="#333333" android:layout_below="@id/login" android:layout_marginLeft="20dip"/>
			<Button android:layout_below="@+id/login"  android:layout_height="50dip"  android:id="@+id/next"  android:text="@string/talk_next_step"  android:textSize="18dip" android:textColor="?theme_button_text_color" android:layout_width="fill_parent"   android:layout_marginLeft="18dip" android:layout_marginRight="18dip"  android:layout_marginTop="55dip" android:background="?theme_button" android:shadowColor="#a2000000"   android:layout_weight="1"  />
			<ImageView   android:layout_width="wrap_content"  android:id="@+id/logo"  android:src="@drawable/logo_icon" android:layout_height="wrap_content" android:layout_marginTop="50dip"  android:layout_centerHorizontal="true"/>
		</RelativeLayout>
	</ScrollView>
</RelativeLayout>