<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_content"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="none" >

        <RelativeLayout
            android:id="@+id/main_content"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="150dip"
                android:background="?theme_bg_input"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/old_password"
                    android:layout_width="fill_parent"
                    android:layout_height="50dip"
                    android:layout_marginLeft="20dip"
                    android:background="#00000000"
                    android:drawableLeft="@drawable/login_pwd"
                    android:drawablePadding="20dip"
                    android:gravity="center_vertical"
                    android:hint="@string/talk_old_pwd"
                    android:maxLength="15"
                    android:password="true"
                    android:textColor="#ffffff"
                    android:textSize="15dip" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="?theme_divider_login" />

                <EditText
                    android:id="@+id/new_password"
                    android:layout_width="fill_parent"
                    android:layout_height="50dip"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="20dip"
                    android:background="#00000000"
                    android:digits="@string/talk_name_digits"
                    android:drawableLeft="@drawable/login_pwd"
                    android:drawablePadding="20dip"
                    android:gravity="center_vertical"
                    android:hint="@string/talk_new_pwd"
                    android:maxLength="15"
                    android:password="true"
                    android:singleLine="true"
                    android:textColor="#ffffff"
                    android:textSize="15dip" />
 <!-- android:digits="@string/name_digits" -->
            </LinearLayout>

            <CheckBox
                android:id="@+id/show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="20dip"
                android:layout_marginTop="5dip"
                android:button="?theme_btn_check"
                android:text="@string/talk_show_password"
                android:textColor="#BBBBBB" />

            <Button
                android:id="@+id/change_password"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_below="@+id/login"
                android:layout_marginLeft="18dip"
                android:layout_marginRight="18dip"
                android:layout_marginTop="55dip"
                android:layout_weight="1"
                android:background="?theme_button"
                android:text="@string/talk_update1"
                android:textColor="?theme_button_text_color"
                android:textSize="18dip" />

            <TextView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dip"
                android:text="@string/talk_tools_pwd_update"
                android:textColor="?theme_button_text_color"
                android:textSize="28dip" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>