<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" >
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="vertical">
		<include layout="@layout/include_main_header" />
	</LinearLayout>

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:orientation="vertical" >

		<!--GPS状态-->
		<LinearLayout android:gravity="center_vertical"
			android:id="@id/talk_gps_state_item" android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="40dip">
			<TextView android:id="@+id/gps_state_text"
				android:textColor="?theme_button_text_color" android:gravity="right|center"
				android:text="@string/talk_gps_state" android:textSize="14dip"
				android:layout_width="100dip" android:layout_height="fill_parent" />
			<RelativeLayout android:layout_toRightOf="@id/gps_state_text"
				android:layout_marginLeft="10.0dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content">
				<TextView android:gravity="left|center" android:id="@+id/gps_state"
					android:textColor="?theme_button_text_color" android:text="@string/talk_gps_state_open"
					android:layout_width="wrap_content" android:layout_height="fill_parent" />
				<ImageView android:id="@+id/gps_state_selector" android:layout_width="wrap_content" android:layout_height="fill_parent" 
					android:src="@drawable/point_item_white" android:layout_alignParentRight="true" android:layout_marginRight="10dip" />
				<ImageView android:id="@+id/gps_state_selector_setting" android:layout_width="wrap_content" android:layout_height="fill_parent" 
					android:src="?theme_menu_gps_set" android:layout_alignParentRight="true" android:layout_marginRight="30dip" />
				<ImageView android:id="@+id/gps_state_selector_gps" android:layout_width="wrap_content" android:layout_height="fill_parent" 
					android:src="@drawable/gps_state_enable" android:gravity="center"
					android:layout_alignParentRight="true" android:layout_marginRight="65dip" android:layout_marginTop="10dip" android:layout_marginBottom="10dip" />
			</RelativeLayout>
		</LinearLayout>

		<View android:layout_width="fill_parent" android:layout_height="1dip"
			android:background="?theme_divider_h" />

		<!--回传频率-->
		<LinearLayout android:gravity="center_vertical"
			android:id="@id/talk_gps_frequence_item" android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="40dip">
			<TextView android:id="@+id/gps_frequence_text"
				android:textColor="?theme_button_text_color" android:textSize="14dip"
				android:gravity="right|center" android:text="@string/talk_gps_frequence"
				android:layout_width="100dip" android:layout_height="fill_parent" />
			<RelativeLayout android:layout_toRightOf="@id/gps_frequence_text"
				android:layout_marginLeft="10.0dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content" >
				<TextView android:gravity="left|center" android:id="@+id/gps_frequence"
					android:textColor="?theme_button_text_color" android:text="" android:layout_width="wrap_content"
					android:layout_height="fill_parent" />
				<ImageView android:id="@+id/gps_frequence_selector" android:layout_width="wrap_content" android:layout_height="fill_parent" 
					android:src="@drawable/point_item_white" android:layout_alignParentRight="true" android:layout_marginRight="10dip" />
			</RelativeLayout>
		</LinearLayout>

		<View android:layout_width="fill_parent" android:layout_height="1dip"
			android:background="?theme_divider_h" />

		<!--数据-->
		<LinearLayout android:gravity="center_vertical"
			android:orientation="horizontal" android:layout_width="fill_parent"
			android:layout_height="40dip">
			<TextView android:textColor="?theme_button_text_color" android:textSize="14dip"
				android:gravity="right|center" android:text="@string/talk_gps_data"
				android:layout_width="100dip" android:layout_height="fill_parent" />
			<ImageView android:id="@+id/gps_type" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dip"/>
		</LinearLayout>
		<LinearLayout android:gravity="center_vertical"
			android:orientation="horizontal" android:layout_width="fill_parent"
			android:layout_height="35dip">
			<TextView android:id="@+id/gps_x_text" android:textColor="?theme_button_text_color"
				android:textSize="13dip" android:gravity="right|center"
				android:text="@string/talk_gps_data_long" android:layout_width="120dip"
				android:layout_height="fill_parent" />
			<TextView android:id="@+id/gps_x" android:layout_toRightOf="@id/gps_x_text"
				android:textColor="?theme_button_text_color" android:textSize="13dip"
				android:gravity="left|center" android:layout_marginLeft="10.0dip"
				android:text="" android:layout_width="150dip"
				android:layout_height="fill_parent" />
		</LinearLayout>
		<LinearLayout android:gravity="center_vertical"
			android:orientation="horizontal" android:layout_width="fill_parent"
			android:layout_height="35dip">
			<TextView android:id="@+id/gps_y_text" android:textColor="?theme_button_text_color"
				android:textSize="13dip" android:gravity="right|center"
				android:text="@string/talk_gps_data_lat" android:layout_width="120dip"
				android:layout_height="fill_parent" />
			<TextView android:id="@+id/gps_y" android:layout_toRightOf="@id/gps_y_text"
				android:textColor="?theme_button_text_color" android:textSize="13dip"
				android:gravity="left|center" android:layout_marginLeft="10.0dip"
				android:text="" android:layout_width="150dip"
				android:layout_height="fill_parent" />
		</LinearLayout>
		<LinearLayout android:gravity="center_vertical"
			android:orientation="horizontal" android:layout_width="fill_parent"
			android:layout_height="35dip">
			<TextView android:id="@+id/gps_h_text" android:textColor="?theme_button_text_color"
				android:textSize="13dip" android:gravity="right|center"
				android:text="@string/talk_gps_data_h" android:layout_width="120dip"
				android:layout_height="fill_parent" />
			<TextView android:id="@+id/gps_h" android:layout_toRightOf="@id/gps_h_text"
				android:textColor="?theme_button_text_color" android:textSize="13dip"
				android:gravity="left|center" android:layout_marginLeft="10.0dip"
				android:text="" android:layout_width="150dip"
				android:layout_height="fill_parent" />
		</LinearLayout>
		<LinearLayout android:gravity="center_vertical"
			android:orientation="horizontal" android:layout_width="fill_parent"
			android:layout_height="35dip">
			<TextView android:id="@+id/gps_s_text" android:textColor="?theme_button_text_color"
				android:textSize="13dip" android:gravity="right|center"
				android:text="@string/talk_gps_data_s" android:layout_width="120dip"
				android:layout_height="fill_parent" />
			<TextView android:id="@+id/gps_s" android:layout_toRightOf="@id/gps_s_text"
				android:textColor="?theme_button_text_color" android:textSize="13dip"
				android:gravity="left|center" android:layout_marginLeft="10.0dip"
				android:text="" android:layout_width="150dip"
				android:layout_height="fill_parent" />
		</LinearLayout>
		<LinearLayout android:gravity="center_vertical"
			android:orientation="horizontal" android:layout_width="fill_parent"
			android:layout_height="35dip">
			<TextView android:id="@+id/gps_o_text" android:textColor="?theme_button_text_color"
				android:textSize="13dip" android:gravity="right|center"
				android:text="@string/talk_gps_data_o" android:layout_width="120dip"
				android:layout_height="fill_parent" />
			<TextView android:id="@+id/gps_o" android:layout_toRightOf="@id/gps_o_text"
				android:textColor="?theme_button_text_color" android:textSize="13dip"
				android:gravity="left|center" android:layout_marginLeft="10.0dip"
				android:text="" android:layout_width="150dip"
				android:layout_height="fill_parent" />
		</LinearLayout>
		<LinearLayout android:gravity="center_vertical"
			android:orientation="horizontal" android:layout_width="fill_parent"
			android:layout_height="35dip">
			<TextView android:id="@+id/gps_t_text" android:textColor="?theme_button_text_color"
				android:textSize="13dip" android:gravity="right|center"
				android:text="@string/talk_gps_data_t" android:layout_width="120dip"
				android:layout_height="fill_parent" />
			<TextView android:id="@+id/gps_t" android:layout_toRightOf="@id/gps_t_text"
				android:textColor="?theme_button_text_color" android:textSize="13dip"
				android:gravity="left|center" android:layout_marginLeft="10.0dip"
				android:text="" android:layout_width="180dip"
				android:layout_height="fill_parent" />
		</LinearLayout>

	</LinearLayout>
</LinearLayout>
